Add French translations for reports, rules form, and transactions pages
- Create complete French reports locale file (reports/fr.yml)
- Fix "Version :" extra colon in users/fr.yml
- Translate IF/THEN/FOR labels in rules form to i18n
- Add all_resources and starting_from translations for rules
- Add missing French translations for transactions page:
  - selection_bar, transfer_match, activity_labels
  - search filters (status, account, merchant, tag, category, date)
  - bulk_updates section
  - pending/duplicate handling messages

--- a/config/locales/views/rules/en.yml
+++ b/config/locales/views/rules/en.yml
@@ -30,9 +30,14 @@ en:
     form:
       name_label: Rule name (optional)
       name_placeholder: Enter a name for this rule
+      if_label: IF
+      then_label: THEN
+      for_label: FOR
       add_condition: Add condition
       add_condition_group: Add condition group
       add_action: Add action
+      all_resources: All Resources
+      starting_from: Starting From
     condition_group:
       and: and
       match: match
