Extract hardcoded text from transactions summary and budgets to i18n
- Replace hardcoded "Total transactions", "Income", "Expenses" in transactions summary
- Replace hardcoded "Categories", "Amount" in budget categories
- Replace hardcoded "Income", "Expenses" in budgets actuals summary
- Add English locale entries for budget_categories and actuals_summary

--- a/config/locales/views/budgets/en.yml
+++ b/config/locales/views/budgets/en.yml
@@ -25,3 +25,9 @@ en:
       of_budget: of %{amount}
       new_budget: New budget
       unused: Unused
+    budget_categories:
+      categories: Categories
+      amount: Amount
+    actuals_summary:
+      income: Income
+      expenses: Expenses
