Extract hardcoded English text to i18n translations
- Add translations for imports nav steps (Upload, Configure, Clean, Map, Confirm)
- Add translations for budgets summary (expected income, earned, over, left, etc.)
- Add translations for dashboard balance sheet table headers (Name, Weight, Value)
- Add translations for family exports list (Exporting, confirmations, No exports)
- Add translations for accounts container buttons (Previous, Next)
- Add translations for assistant messages tool calls
- Add translations for holdings cost basis cell (Set)
- Add translations for rules edit page (Back to rules, Edit rule)
- Add translations for settings hosting templates (setup instructions)
- Add translations for transfers account links (Data Error)
- Add French translations for other_assets balance_tracking_info

--- a/config/locales/views/budgets/en.yml
+++ b/config/locales/views/budgets/en.yml
@@ -28,6 +28,13 @@ en:
     budget_categories:
       categories: Categories
       amount: Amount
+    budgeted_summary:
+      expected_income: Expected income
+      amount_earned: "%{amount} earned"
+      amount_over: "%{amount} over"
+      amount_left: "%{amount} left"
+      budgeted: Budgeted
+      amount_spent: "%{amount} spent"
     actuals_summary:
       income: Income
       expenses: Expenses
