--- a/config/locales/views/accounts/en.yml
+++ b/config/locales/views/accounts/en.yml
@@ -45,6 +45,8 @@ en:
         navigate: Navigate
         close: Close
         esc: ESC
+        previous: Previous
+        next: Next
       method_selector:
         connected_entry: Link account
         connected_entry_eu: Link EU account
