--- a/config/locales/views/accounts/fr.yml
+++ b/config/locales/views/accounts/fr.yml
@@ -52,6 +52,8 @@ fr:
         navigate: Naviguer
         close: Fermer
         esc: ÉCHAP
+        previous: Précédent
+        next: Suivant
       method_selector:
         connected_entry: Lier un compte
         connected_entry_eu: Lier un compte européen
