Add French translations for transaction type tabs
- Add shared.transaction_tabs translations (Expense, Income, Transfer)
- Fix transactions.new.title translation key (was new_transaction)

--- a/config/locales/views/shared/en.yml
+++ b/config/locales/views/shared/en.yml
@@ -23,6 +23,10 @@ en:
     profile_info: Profile Info
     import_export: Import/Export
   shared:
+    transaction_tabs:
+      expense: Expense
+      income: Income
+      transfer: Transfer
     confirm_modal:
       accept: Confirm
       body_html: "<p>You will not be able to undo this decision</p>"
