--- a/config/locales/views/shared/fr.yml
+++ b/config/locales/views/shared/fr.yml
@@ -26,6 +26,10 @@ fr:
     llm_usage: Utilisation LLM
     sync_providers: Fournisseurs de synchronisation
   shared:
+    transaction_tabs:
+      expense: Dépense
+      income: Revenu
+      transfer: Virement
     confirm_modal:
       accept: Confirmer
       body_html: "<p>Vous ne pourrez pas annuler cette action</p>"
