--- a/config/locales/views/transactions/fr.yml
+++ b/config/locales/views/transactions/fr.yml
@@ -80,7 +80,7 @@ fr:
       tags_label: Étiquettes
       transfer: Transfert
     new:
-      new_transaction: Nouvelle transaction
+      title: Nouvelle transaction
     show:
       account_label: Compte
       amount: Montant
