Translate step names in budget and onboarding navigation
- Extract hardcoded step names from budgets/_budget_nav.html.erb
  to use t() helper
- Extract hardcoded step names from onboardings/_onboarding_nav.html.erb
  to use t() helper
- Add English and French translations for budget_nav (Setup, Categories)
- Add English and French translations for onboarding_nav (Setup,
  Preferences, Goals, Start)

--- a/config/locales/views/budgets/en.yml
+++ b/config/locales/views/budgets/en.yml
@@ -1,6 +1,9 @@
 ---
 en:
   budgets:
+    budget_nav:
+      setup: Setup
+      categories: Categories
     over_allocation_warning:
       over_allocated_message: You have over-allocated your budget. Please fix your allocations.
       fix_allocations: Fix allocations
