Use I18n.l for date localization instead of strftime
Replace strftime("%B %d, %Y") and strftime("%B %Y") with I18n.l()
to properly localize date formatting including month names.

Files updated:
- reports/_budget_performance.html.erb
- reports/print.html.erb
- onboardings/trial.html.erb
- valuations/_confirmation_contents.html.erb
- settings/api_keys/created.html.erb
- settings/api_keys/created.turbo_stream.erb
- settings/billings/show.html.erb
- pages/changelog.html.erb

Also added pages.changelog.date_unavailable translation key.

--- a/config/locales/views/pages/en.yml
+++ b/config/locales/views/pages/en.yml
@@ -3,6 +3,7 @@ en:
   pages:
     changelog:
       title: What's new
+      date_unavailable: Date unavailable
     dashboard:
       welcome: "Welcome back, %{name}"
       subtitle: "Here's what's happening with your finances"
