Extract more hardcoded English text to i18n translations
Files updated:
- registrations/new.html.erb: Password requirement hints
- assistant_messages/_assistant_message.html.erb: "Assistant reasoning"
- pages/feedback.html.erb: Feedback page text
- budget_categories/index.html.erb: Page title and description
- budget_categories/show.html.erb: Date formatting with I18n.l
- valuations/_confirmation_contents.html.erb: Account type labels
  and confirmation messages

--- a/config/locales/views/assistant_messages/en.yml
+++ b/config/locales/views/assistant_messages/en.yml
@@ -1,6 +1,8 @@
 ---
 en:
   assistant_messages:
+    assistant_message:
+      assistant_reasoning: Assistant reasoning
     tool_calls:
       title: Tool Calls
       function: "Function:"
