--- a/config/locales/views/budget_categories/en.yml
+++ b/config/locales/views/budget_categories/en.yml
@@ -1,6 +1,9 @@
 ---
 en:
   budget_categories:
+    index:
+      title: Edit your category budgets
+      description: Adjust category budgets to set spending limits. Unallocated funds will be automatically assigned as uncategorized.
     no_categories:
       oops: Oops!
       no_categories_message: You have not created or assigned any expense categories to your transactions yet.
@@ -10,6 +13,7 @@ en:
       confirm: Confirm
     show:
       category: Category
+      overview: Overview
       spending: "%{date} spending"
       status: Status
       overspent: overspent
