Fix more hardcoded text and date localization
- category/dropdowns/show.html.erb: Match transfer/payment, one-time labels
- transactions/_transaction.html.erb: One-time income/expense tooltip
- reports/index.html.erb: Use I18n.l for date display
- Added corresponding translations to locale files

--- a/config/locales/views/categories/en.yml
+++ b/config/locales/views/categories/en.yml
@@ -43,3 +43,6 @@ en:
       show:
         bootstrap: Generate default categories
         empty: No categories found
+        match_transfer: Match transfer/payment
+        one_time_income: One-time income
+        one_time_expense: One-time expense
