Replace remaining strftime calls with I18n.l for date localization
Files updated:
- transactions/show.html.erb: Potential match date
- rules/_rule.html.erb: Effective date + hardcoded text
- rules/index.html.erb: Run execution date
- imports/_import.html.erb: Import datetime
- enable_banking_items/new.html.erb: Session expiry date
- settings/providers/_enable_banking_panel.html.erb: Session expiry date
- settings/llm_usages/show.html.erb: Usage created date
- Added rules.rule.all_past_future and on_or_after translations

--- a/config/locales/views/rules/en.yml
+++ b/config/locales/views/rules/en.yml
@@ -28,6 +28,8 @@ en:
       empty_title: No rules yet
       empty_description: Set up rules to perform actions to your transactions and other data on every account sync.
     rule:
+      all_past_future: All past and future %{resource_type}
+      on_or_after: "%{resource_type} on or after %{date}"
       edit: Edit
       reapply: Re-apply rule
       delete: Delete
