Extract more hardcoded text to i18n translations
Files updated:
- subscriptions/_plan_choice.html.erb: Billing text (or/week, billed annually/monthly)
- holdings/show.html.erb: No trade history message
- holdings/new.html.erb: Coming soon message
- enable_banking_items/_enable_banking_item.html.erb: Provider name

Added translations:
- subscriptions/en.yml & fr.yml: plan_choice section
- holdings/en.yml & fr.yml: no_trade_history, coming_soon
- enable_banking_items/en.yml & fr.yml (new): provider_name and other keys

--- a/config/locales/views/enable_banking_items/en.yml
+++ b/config/locales/views/enable_banking_items/en.yml
@@ -87,6 +87,7 @@ en:
       link: Link
       cancel: Cancel
     enable_banking_item:
+      provider_name: Enable Banking
       deletion_in_progress: Deletion in progress
       syncing: Syncing...
       reconnect: Reconnect
