--- a/config/locales/views/holdings/fr.yml
+++ b/config/locales/views/holdings/fr.yml
@@ -54,3 +54,11 @@ fr:
       trade_history_entry: "%{qty} actions de %{security} à %{price}"
       total_return_label: Rendement total
       unknown: Inconnu
+      cost_basis_locked_label: Le prix de revient est verrouillé
+      cost_basis_locked_description: Votre prix de revient défini manuellement ne sera pas modifié par les synchronisations.
+      unlock_cost_basis: Déverrouiller
+      unlock_confirm_title: Déverrouiller le prix de revient ?
+      unlock_confirm_body: Cela permettra la mise à jour du prix de revient par les synchronisations du fournisseur ou les calculs d'opérations.
+      no_trade_history: Aucun historique d'opérations disponible pour cette position.
+    new:
+      coming_soon: Bientôt disponible...
